[package]
name = "nuc2not"
description = "Migrate a Nuclino workspace to a Notion team."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive", "wrap_help"] }
dotenvy = "0.15.7"
futures = "0.3.30"
fzf-wrapped = "0.1.3"
markdown = "1.0.0-alpha.18"
miette = { version = "7.2.0", features = ["owo-colors", "textwrap", "fancy"] }
notion-client = "1.0.1"
nuclino-rs = "1.1.2"
once_cell = "1.19.0"
owo-colors = "4.0.0"
serde = "1.0.204"
serde_json = "1.0.120"
slug = "0.1.5"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"

[dev-dependencies]
anyhow = "1.0.86"
