[package]
name = "nuc2not"
description = "Migrate a Nuclino workspace to Notion pages."
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Parity-7.0.0"
categories = ["command-line-utilities"]
keywords = ["cli", "nuclino", "notion"]
repository = "https://github.com/ceejbot/nuc2not"
homepage = "https://github.com/ceejbot/nuc2not"
authors = ["C J Silverio <ceejceej@gmail.com>"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.11", features = ["derive", "wrap_help"] }
dotenvy = "0.15.7"
futures = "0.3.30"
fzf-wrapped = "0.1.3"
markdown = "1.0.0-alpha.18"
miette = { version = "7.2.0", features = ["owo-colors", "textwrap", "fancy"] }
notion-client = "1.0.2"
nuclino-rs = "1.1.3"
once_cell = "1.19.0"
owo-colors = "4.0.0"
serde = "1.0.204"
serde_json = "1.0.120"
slug = "0.1.5"
tempfile = "3.10.1"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = "0.1.15"

[dev-dependencies]
anyhow = "1.0.86"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
